--- a/csse_covid_19_data/csse_covid_19_time_series/Untitled.ipynb
+++ b/csse_covid_19_data/csse_covid_19_time_series/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "[3 rows x 64 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "[3 rows x 64 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "[3 rows x 64 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "[5 rows x 501 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "[3 rows x 501 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
        "[3 rows x 501 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
        "2020-03-23         311.0       5988.0  633.0     1996.0  26193.0  3235.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1525,7 @@
        "2020-03-23      262.631579  557.297872  367.613636  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
        "Freq: D, Name: (China, Hubei time-shifted), dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1751,7 @@
        "2020-03-15      84.473684  154.914894  97.045455          80.216667  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,16 +1816,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1271f2a10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11bb1ee50>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1857,16 +1857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1223f93d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c7fde90>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1898,16 +1898,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x121cbfb90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11c8ddd90>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1937,20 +1937,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2020-01-22      0.00\\n2020-01-23      0.00\\n2020-01-24      0.00\\n2020-01-25      0.00\\n2020-01-26      0.00\\n2020-01-27      0.00\\n2020-01-28      0.00\\n2020-01-29      0.00\\n2020-01-30      0.00\\n2020-01-31      0.00\\n2020-02-01      0.00\\n2020-02-02      0.00\\n2020-02-03      0.00\\n2020-02-04      0.00\\n2020-02-05      0.00\\n2020-02-06      0.00\\n2020-02-07      0.00\\n2020-02-08      0.00\\n2020-02-09      0.00\\n2020-02-10      0.00\\n2020-02-11      0.00\\n2020-02-12      0.00\\n2020-02-13      0.00\\n2020-02-14      0.00\\n2020-02-15      0.00\\n2020-02-16      0.00\\n2020-02-17      0.00\\n2020-02-18      0.00\\n2020-02-19      0.00\\n2020-02-20      0.00\\n2020-02-21      0.00\\n2020-02-22      0.00\\n2020-02-23      0.00\\n2020-02-24      0.00\\n2020-02-25      0.00\\n2020-02-26      0.00\\n2020-02-27      0.00\\n2020-02-28      0.00\\n2020-02-29      0.00\\n2020-03-01      0.00\\n2020-03-02      0.00\\n2020-03-03      0.00\\n2020-03-04      0.25\\n2020-03-05      0.25\\n2020-03-06      1.25\\n2020-03-07      1.25\\n2020-03-08      2.75\\n2020-03-09      4.00\\n2020-03-10      5.50\\n2020-03-11      7.75\\n2020-03-12     12.25\\n2020-03-13     17.00\\n2020-03-14     25.75\\n2020-03-15     29.75\\n2020-03-16     41.00\\n2020-03-17     56.25\\n2020-03-18     59.50\\n2020-03-19     88.50\\n2020-03-20    106.00\\n2020-03-21    133.75\\n2020-03-22    158.25\\n2020-03-23    158.25'"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df6.loc[:,('Poland',np.nan)].to_string()"
    ]
@@ -1971,31 +1960,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2020-01-22      0.00\n",
-       "2020-01-23      0.00\n",
-       "2020-01-24      0.00\n",
-       "2020-01-25      0.00\n",
-       "2020-01-26      0.00\n",
-       "               ...  \n",
-       "2020-03-19     88.50\n",
-       "2020-03-20    106.00\n",
-       "2020-03-21    133.75\n",
-       "2020-03-22    158.25\n",
-       "2020-03-23    158.25\n",
-       "Name: (Poland, nan), Length: 62, dtype: float64"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df6.loc[:,('Poland',np.nan)]"
    ]
@@ -2009,21 +1976,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df5' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-0340212638d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf5\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Mainland China'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Anhui'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0;36m9999999.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf5\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df5' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df5.loc[:,('Mainland China','Anhui')] /= 9999999.\n",
     "df5.head(3)"
