--- a/csse_covid_19_data/csse_covid_19_time_series/Untitled.ipynb
+++ b/csse_covid_19_data/csse_covid_19_time_series/Untitled.ipynb
@@ -1809,6 +1809,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we have approx 14k IC beds for Germany.  div 80 is 175 per 1 mio inhab.  Assuming that 1% of _measured_ cases\n",
+    "# progress to IC level, overload starts at 17500 cases per 1 mio inhab.  This somewhat optimistic since they \n",
+    "# stay there for 10 days,\n",
+    "# but on the other hand, if the curve was flat, then it would still just be the share of \"infected\" cases that \n",
+    "# needs IC. (To cleanly account for the 10 days, we would need to plot _new_ cases.)\n",
     "fit = pd.Series(0*np.arange(0,90,1)+17500)\n",
     "fit.index = pd.date_range(start=\"2020-03-1\",periods=fit.size)\n",
     "combined = pd.concat([combinedTmp2,fit],axis=1)"
